# bazel-mingw64

./: .bazelrc  .gitignore  README.md  WORKSPACE.bazel
example/greeter/: BUILD.bazel
example/greeter/include/: util.h
example/greeter/src/: main.cpp
example/libgreet/: BUILD.bazel
example/libgreet/include/: greet_private.h
example/libgreet/test/: greet_test.cpp
greeter/: BUILD.bazel
greeter/src/: util.cpp
libgreet/: BUILD.bazel
libgreet/public/greet/: greet.h
libgreet/src/: greet.cpp
threads/: BUILD.bazel
toolchain/: BUILD.bazel  mingw.bzl  mingw64.bzl
