workspace(name = "bazel-mingw64")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# GTest

http_archive(
    name = "com_google_googletest",
    strip_prefix = "googletest-5ab508a01f9eb089207ee87fd547d290da39d015",
    urls = ["https://github.com/google/googletest/archive/5ab508a01f9eb089207ee87fd547d290da39d015.zip"],
)

# Toolchains

register_toolchains("//toolchain:all")
