cc_binary(
    name = "greeter",
    srcs = [
        "include/util.h",
        "src/main.cpp",
        "src/util.cpp"
    ],
    copts = [
        "-Igreeter/include",
    ],
    # dynamic_deps = [
    #     "//libgreet:greet_shared",
    # ],
    visibility = ["//visibility:public"],
    deps = [
        # "//libgreet:greet",
        "//libgreet:greet_shared_dll",
    ],
)

