load("mingw.bzl", "mingw_toolchain")

package(default_visibility = ["//visibility:public"])

filegroup(name = "empty")

cc_toolchain_suite(
    name = "mingw_suite",
    toolchains = {
        "x86_64": ":x86_64_mingw_toolchain",
        "x86_32": ":x86_32_mingw_toolchain"
    },
)

mingw_toolchain(name = "x86_64_mingw_toolchain", compiler_components = ":empty", architecture = "x86_64")
mingw_toolchain(name = "x86_32_mingw_toolchain", compiler_components = ":empty", architecture = "x86_32")

platform(
    name = "mingw_x86_64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64"
    ],
)
platform(
    name = "mingw_x86_32",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_32"
    ],
)

