load("mingw64.bzl", "mingw_toolchain")

package(default_visibility = ["//visibility:public"])

filegroup(name = "empty")

# Define the toolchains, architecture [x86_64, i686] x threads [win32, posix]
# and platforms named mingw-architecture-threads, i.e. mingw-x86_64-win32.

mingw_toolchain(
    name = "x86_64_mingw_posix_toolchain",
    architecture = "x86_64",
    compiler_components = ":empty",
    threads = "posix",
)

mingw_toolchain(
    name = "x86_64_mingw_win32_toolchain",
    architecture = "x86_64",
    compiler_components = ":empty",
    threads = "win32",
)

mingw_toolchain(
    name = "x86_32_mingw_posix_toolchain",
    architecture = "x86_32",
    compiler_components = ":empty",
    threads = "posix",
)

mingw_toolchain(
    name = "x86_32_mingw_win32_toolchain",
    architecture = "x86_32",
    compiler_components = ":empty",
    threads = "win32",
)
