cc_binary(
    name = "greeter",
    srcs = [
        "include/util.h",
        "src/main.cpp",
        "src/util.cpp"
    ],
    data = ["include"],
    copts = [
        "-I$(rootpath include)",
    ],
    # dynamic_deps = [
    #     "//example/libgreet:greet_shared",
    # ],
    visibility = ["//visibility:public"],
    deps = [
        # "//example/libgreet:greet",
        "//example/libgreet:greet_shared_dll",
    ],
)

