cc_binary(
    name = "greeter",
    srcs = [
        "include/util.h",
        "src/main.cpp",
        "src/util.cpp",
    ],
    copts = [
        "-I$(rootpath include)",
    ],
    data = ["include"],
    # dynamic_deps = [
    #     "//example/libgreet:greet_shared",
    # ],
    visibility = ["//visibility:public"],
    deps = [
        # "//example/libgreet:greet",
        "//example/libgreet:greet_shared_dll",
    ],
)
