srcs = [
    "src/greet.cpp",
    "include/greet_private.h",
]

hdrs = ["public/greet/greet.h"]

data = ["include"]

deps = []

copts = ["-I$(rootpath include)"]

includes = ["public"]

defines = []

visibility = ["//visibility:public"]

# Static Version
cc_library(
    name = "greet",
    srcs = srcs,
    hdrs = hdrs,
    data = data,
    copts = copts,
    includes = includes,
    linkstatic = True,
    visibility = visibility,
    deps = deps,
)

# Shared Version
cc_binary(
    name = "greet_shared",
    srcs = srcs + hdrs,
    data = data,
    copts = copts,
    defines = defines + ["GREET_EXPORT"],
    includes = includes,
    linkshared = True,
    visibility = visibility,
    deps = deps,
)

# filegroup(
#     name = "greet_shared_import_lib",
#     srcs = [":greet_shared.dll"],
#     output_group = "interface_library",
# )

cc_import(
    name = "greet_shared_import_target",
    #     interface_library = ":greet_shared_import_lib",
    shared_library = ":greet_shared",
)

cc_library(
    name = "greet_shared_dll",
    hdrs = hdrs,
    defines = defines + ["GREET_IMPORT"],
    includes = includes,
    visibility = visibility,
    deps = deps + [":greet_shared_import_target"],
)

cc_test(
    name = "greet_test",
    size = "small",
    srcs = ["test/greet_test.cpp"],
    visibility = visibility,
    deps = [
        ":greet",
        "@com_google_googletest//:gtest_main",
    ],
)
